jupyter notebook data added

--- a/jupyter/Week1Seminar.ipynb
+++ b/jupyter/Week1Seminar.ipynb
@@ -49,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.read_json(\"/Users/fedor/data.json\", lines=True)\n",
+    "data = pd.read_json(\"./data.json\", lines=True)\n",
     "data[\"treatment\"] = data[\"experiments\"].map(lambda experiments: experiments[experiment])"
    ]
   },
@@ -409,22 +409,22 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_0a1da_row0_col2, #T_0a1da_row0_col3, #T_0a1da_row0_col4, #T_0a1da_row1_col2, #T_0a1da_row1_col3, #T_0a1da_row2_col2, #T_0a1da_row2_col3, #T_0a1da_row2_col4, #T_0a1da_row3_col2, #T_0a1da_row3_col3, #T_0a1da_row3_col4, #T_0a1da_row4_col3 {\n",
+       "#T_c0fbd_row0_col2, #T_c0fbd_row0_col3, #T_c0fbd_row0_col4, #T_c0fbd_row1_col2, #T_c0fbd_row1_col3, #T_c0fbd_row2_col2, #T_c0fbd_row2_col3, #T_c0fbd_row2_col4, #T_c0fbd_row3_col2, #T_c0fbd_row3_col3, #T_c0fbd_row3_col4, #T_c0fbd_row4_col3 {\n",
        "  color: green;\n",
        "}\n",
-       "#T_0a1da_row0_col7, #T_0a1da_row2_col7, #T_0a1da_row3_col7 {\n",
+       "#T_c0fbd_row0_col7, #T_c0fbd_row2_col7, #T_c0fbd_row3_col7 {\n",
        "  color: white;\n",
        "  background-color: green;\n",
        "}\n",
-       "#T_0a1da_row1_col4, #T_0a1da_row4_col2, #T_0a1da_row4_col4 {\n",
+       "#T_c0fbd_row1_col4, #T_c0fbd_row4_col2, #T_c0fbd_row4_col4 {\n",
        "  color: red;\n",
        "}\n",
-       "#T_0a1da_row1_col7, #T_0a1da_row4_col7 {\n",
+       "#T_c0fbd_row1_col7, #T_c0fbd_row4_col7 {\n",
        "  color: white;\n",
        "  background-color: red;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_0a1da_\">\n",
+       "<table id=\"T_c0fbd_\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
@@ -440,65 +440,65 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_0a1da_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_0a1da_row0_col0\" class=\"data row0 col0\" >T1</td>\n",
-       "      <td id=\"T_0a1da_row0_col1\" class=\"data row0 col1\" >time</td>\n",
-       "      <td id=\"T_0a1da_row0_col2\" class=\"data row0 col2\" >83.726</td>\n",
-       "      <td id=\"T_0a1da_row0_col3\" class=\"data row0 col3\" >101.373</td>\n",
-       "      <td id=\"T_0a1da_row0_col4\" class=\"data row0 col4\" >66.079</td>\n",
-       "      <td id=\"T_0a1da_row0_col5\" class=\"data row0 col5\" >4.799</td>\n",
-       "      <td id=\"T_0a1da_row0_col6\" class=\"data row0 col6\" >8.817</td>\n",
-       "      <td id=\"T_0a1da_row0_col7\" class=\"data row0 col7\" >True</td>\n",
+       "      <th id=\"T_c0fbd_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_c0fbd_row0_col0\" class=\"data row0 col0\" >T1</td>\n",
+       "      <td id=\"T_c0fbd_row0_col1\" class=\"data row0 col1\" >time</td>\n",
+       "      <td id=\"T_c0fbd_row0_col2\" class=\"data row0 col2\" >83.726</td>\n",
+       "      <td id=\"T_c0fbd_row0_col3\" class=\"data row0 col3\" >101.373</td>\n",
+       "      <td id=\"T_c0fbd_row0_col4\" class=\"data row0 col4\" >66.079</td>\n",
+       "      <td id=\"T_c0fbd_row0_col5\" class=\"data row0 col5\" >4.799</td>\n",
+       "      <td id=\"T_c0fbd_row0_col6\" class=\"data row0 col6\" >8.817</td>\n",
+       "      <td id=\"T_c0fbd_row0_col7\" class=\"data row0 col7\" >True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_0a1da_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_0a1da_row1_col0\" class=\"data row1 col0\" >T1</td>\n",
-       "      <td id=\"T_0a1da_row1_col1\" class=\"data row1 col1\" >sessions</td>\n",
-       "      <td id=\"T_0a1da_row1_col2\" class=\"data row1 col2\" >2.174</td>\n",
-       "      <td id=\"T_0a1da_row1_col3\" class=\"data row1 col3\" >4.641</td>\n",
-       "      <td id=\"T_0a1da_row1_col4\" class=\"data row1 col4\" >-0.294</td>\n",
-       "      <td id=\"T_0a1da_row1_col5\" class=\"data row1 col5\" >1.031</td>\n",
-       "      <td id=\"T_0a1da_row1_col6\" class=\"data row1 col6\" >1.053</td>\n",
-       "      <td id=\"T_0a1da_row1_col7\" class=\"data row1 col7\" >False</td>\n",
+       "      <th id=\"T_c0fbd_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_c0fbd_row1_col0\" class=\"data row1 col0\" >T1</td>\n",
+       "      <td id=\"T_c0fbd_row1_col1\" class=\"data row1 col1\" >sessions</td>\n",
+       "      <td id=\"T_c0fbd_row1_col2\" class=\"data row1 col2\" >2.174</td>\n",
+       "      <td id=\"T_c0fbd_row1_col3\" class=\"data row1 col3\" >4.641</td>\n",
+       "      <td id=\"T_c0fbd_row1_col4\" class=\"data row1 col4\" >-0.294</td>\n",
+       "      <td id=\"T_c0fbd_row1_col5\" class=\"data row1 col5\" >1.031</td>\n",
+       "      <td id=\"T_c0fbd_row1_col6\" class=\"data row1 col6\" >1.053</td>\n",
+       "      <td id=\"T_c0fbd_row1_col7\" class=\"data row1 col7\" >False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_0a1da_level0_row2\" class=\"row_heading level0 row2\" >3</th>\n",
-       "      <td id=\"T_0a1da_row2_col0\" class=\"data row2 col0\" >T1</td>\n",
-       "      <td id=\"T_0a1da_row2_col1\" class=\"data row2 col1\" >mean_tracks_per_session</td>\n",
-       "      <td id=\"T_0a1da_row2_col2\" class=\"data row2 col2\" >38.085</td>\n",
-       "      <td id=\"T_0a1da_row2_col3\" class=\"data row2 col3\" >46.587</td>\n",
-       "      <td id=\"T_0a1da_row2_col4\" class=\"data row2 col4\" >29.583</td>\n",
-       "      <td id=\"T_0a1da_row2_col5\" class=\"data row2 col5\" >9.676</td>\n",
-       "      <td id=\"T_0a1da_row2_col6\" class=\"data row2 col6\" >13.361</td>\n",
-       "      <td id=\"T_0a1da_row2_col7\" class=\"data row2 col7\" >True</td>\n",
+       "      <th id=\"T_c0fbd_level0_row2\" class=\"row_heading level0 row2\" >3</th>\n",
+       "      <td id=\"T_c0fbd_row2_col0\" class=\"data row2 col0\" >T1</td>\n",
+       "      <td id=\"T_c0fbd_row2_col1\" class=\"data row2 col1\" >mean_tracks_per_session</td>\n",
+       "      <td id=\"T_c0fbd_row2_col2\" class=\"data row2 col2\" >38.085</td>\n",
+       "      <td id=\"T_c0fbd_row2_col3\" class=\"data row2 col3\" >46.587</td>\n",
+       "      <td id=\"T_c0fbd_row2_col4\" class=\"data row2 col4\" >29.583</td>\n",
+       "      <td id=\"T_c0fbd_row2_col5\" class=\"data row2 col5\" >9.676</td>\n",
+       "      <td id=\"T_c0fbd_row2_col6\" class=\"data row2 col6\" >13.361</td>\n",
+       "      <td id=\"T_c0fbd_row2_col7\" class=\"data row2 col7\" >True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_0a1da_level0_row3\" class=\"row_heading level0 row3\" >4</th>\n",
-       "      <td id=\"T_0a1da_row3_col0\" class=\"data row3 col0\" >T1</td>\n",
-       "      <td id=\"T_0a1da_row3_col1\" class=\"data row3 col1\" >mean_time_per_session</td>\n",
-       "      <td id=\"T_0a1da_row3_col2\" class=\"data row3 col2\" >78.416</td>\n",
-       "      <td id=\"T_0a1da_row3_col3\" class=\"data row3 col3\" >95.568</td>\n",
-       "      <td id=\"T_0a1da_row3_col4\" class=\"data row3 col4\" >61.264</td>\n",
-       "      <td id=\"T_0a1da_row3_col5\" class=\"data row3 col5\" >4.703</td>\n",
-       "      <td id=\"T_0a1da_row3_col6\" class=\"data row3 col6\" >8.390</td>\n",
-       "      <td id=\"T_0a1da_row3_col7\" class=\"data row3 col7\" >True</td>\n",
+       "      <th id=\"T_c0fbd_level0_row3\" class=\"row_heading level0 row3\" >4</th>\n",
+       "      <td id=\"T_c0fbd_row3_col0\" class=\"data row3 col0\" >T1</td>\n",
+       "      <td id=\"T_c0fbd_row3_col1\" class=\"data row3 col1\" >mean_time_per_session</td>\n",
+       "      <td id=\"T_c0fbd_row3_col2\" class=\"data row3 col2\" >78.416</td>\n",
+       "      <td id=\"T_c0fbd_row3_col3\" class=\"data row3 col3\" >95.568</td>\n",
+       "      <td id=\"T_c0fbd_row3_col4\" class=\"data row3 col4\" >61.264</td>\n",
+       "      <td id=\"T_c0fbd_row3_col5\" class=\"data row3 col5\" >4.703</td>\n",
+       "      <td id=\"T_c0fbd_row3_col6\" class=\"data row3 col6\" >8.390</td>\n",
+       "      <td id=\"T_c0fbd_row3_col7\" class=\"data row3 col7\" >True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_0a1da_level0_row4\" class=\"row_heading level0 row4\" >2</th>\n",
-       "      <td id=\"T_0a1da_row4_col0\" class=\"data row4 col0\" >T1</td>\n",
-       "      <td id=\"T_0a1da_row4_col1\" class=\"data row4 col1\" >mean_request_latency</td>\n",
-       "      <td id=\"T_0a1da_row4_col2\" class=\"data row4 col2\" >-1.612</td>\n",
-       "      <td id=\"T_0a1da_row4_col3\" class=\"data row4 col3\" >1.108</td>\n",
-       "      <td id=\"T_0a1da_row4_col4\" class=\"data row4 col4\" >-4.331</td>\n",
-       "      <td id=\"T_0a1da_row4_col5\" class=\"data row4 col5\" >1.248</td>\n",
-       "      <td id=\"T_0a1da_row4_col6\" class=\"data row4 col6\" >1.228</td>\n",
-       "      <td id=\"T_0a1da_row4_col7\" class=\"data row4 col7\" >False</td>\n",
+       "      <th id=\"T_c0fbd_level0_row4\" class=\"row_heading level0 row4\" >2</th>\n",
+       "      <td id=\"T_c0fbd_row4_col0\" class=\"data row4 col0\" >T1</td>\n",
+       "      <td id=\"T_c0fbd_row4_col1\" class=\"data row4 col1\" >mean_request_latency</td>\n",
+       "      <td id=\"T_c0fbd_row4_col2\" class=\"data row4 col2\" >-1.612</td>\n",
+       "      <td id=\"T_c0fbd_row4_col3\" class=\"data row4 col3\" >1.108</td>\n",
+       "      <td id=\"T_c0fbd_row4_col4\" class=\"data row4 col4\" >-4.331</td>\n",
+       "      <td id=\"T_c0fbd_row4_col5\" class=\"data row4 col5\" >1.248</td>\n",
+       "      <td id=\"T_c0fbd_row4_col6\" class=\"data row4 col6\" >1.228</td>\n",
+       "      <td id=\"T_c0fbd_row4_col7\" class=\"data row4 col7\" >False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1d2a1653b08>"
+       "<pandas.io.formats.style.Styler at 0x1f24f7e4b48>"
       ]
      },
      "execution_count": 12,
